tests/valid_inputs/class_method_definition.cpp
// tests only that a method can be defined, nothing else
struct S {
	int foo() { return 42; }
}

int main() {}
