tests/invalid_inputs/sema/func_name_as_class.cpp
// check that function cannot have the same name as a class

struct Foo {
	Foo() {}
};

int Foo() {
	return 42;
}

int main() {
	return Foo();
}
